06 basically done. Still having an issue with the spacing between the festival titles and locations

--- a/06/global.css
+++ b/06/global.css
@@ -15,13 +15,13 @@ h1 {
   border-bottom: 1px solid #CC6CC3;
 }
 
-h2 {
+#intro h2 {
   text-align: center;
   font-size: 20px;
   padding-top: 20px;  
 }
 
-#intro {
+#intro p {
   font-size: 16px;
   padding: 8px 20px 20px 20px;
   border-left: 1px solid red;
@@ -29,27 +29,28 @@ h2 {
   margin: 0;
 }
 
-h3 {
+div.month h3 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 22px;
   text-transform: uppercase;
   text-decoration: underline;
-  padding: 20px;
+  margin: 20px;
 }
 
-p {
+div.festival {
   font-size: 14px;
-  margin-left: 20px; 
+  margin: 20px;
 }
 
-a {
+div.festival a {
   background-color: #000000;
   color: #FFFFFF;
   font-size: 16px;
   text-transform: uppercase;
-  padding: 3px;
+  padding: 2px;
+  margin-bottom: 10px;
 }
 
 
